src/objects/ACMEProductsVF__c.object
<CustomObject>
    <description>Automatically generated by EscapeNotes. Remove this text to write protect from EscapeNotes.</description>
    <fields>
        <fullName>Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DescriptionXNRTF__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentId__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <label>Last modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesFiles__c</fullName>
        <label>Notes Files</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>&lt;code event=&quot;defaultvalue&quot;&gt;&lt;formula&gt;&quot;Something&quot;&lt;/formula&gt;&lt;/code&gt;</description>
        <label>ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF__c</fullName>
        <label>REF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplicaId__c</fullName>
        <label>Replica Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondProductCode__c</fullName>
        <description>&lt;code event=&quot;defaultvalue&quot;&gt;&lt;formula&gt;&quot;Something&quot;&lt;/formula&gt;&lt;/code&gt;</description>
        <label>SecondProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACME ProductsVF</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACME ProductsVF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>